--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "animejs": "^3.2.1",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
