--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.1",
+    "aos": "^2.3.4",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
